@@ -1,0 +1,126 @@
+package com.planet_ink.coffee_mud.Abilities.Fighter;
+import com.planet_ink.coffee_mud.Abilities.StdAbility;
+import com.planet_ink.coffee_mud.Abilities.Properties.Prop_RideResister;
+import com.planet_ink.coffee_mud.core.interfaces.*;
+import com.planet_ink.coffee_mud.core.*;
+import com.planet_ink.coffee_mud.core.collections.*;
+import com.planet_ink.coffee_mud.Abilities.interfaces.*;
+import com.planet_ink.coffee_mud.Areas.interfaces.*;
+import com.planet_ink.coffee_mud.Behaviors.interfaces.*;
+import com.planet_ink.coffee_mud.CharClasses.interfaces.*;
+import com.planet_ink.coffee_mud.Commands.interfaces.*;
+import com.planet_ink.coffee_mud.Common.interfaces.*;
+import com.planet_ink.coffee_mud.Exits.interfaces.*;
+import com.planet_ink.coffee_mud.Items.interfaces.*;
+import com.planet_ink.coffee_mud.Libraries.interfaces.*;
+import com.planet_ink.coffee_mud.Locales.interfaces.*;
+import com.planet_ink.coffee_mud.MOBS.interfaces.*;
+import com.planet_ink.coffee_mud.Races.interfaces.*;
+
+import java.util.*;
+import java.util.concurrent.atomic.AtomicBoolean;
+
+/*
+   Copyright 2023-2023 Bo Zimmerman
+
+   Licensed under the Apache License, Version 2.0 (the "License");
+   you may not use this file except in compliance with the License.
+   You may obtain a copy of the License at
+
+	   http://www.apache.org/licenses/LICENSE-2.0
+
+   Unless required by applicable law or agreed to in writing, software
+   distributed under the License is distributed on an "AS IS" BASIS,
+   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+   See the License for the specific language governing permissions and
+   limitations under the License.
+*/
+public class Fighter_AweMounts extends FighterSkill
+{
+	@Override
+	public String ID()
+	{
+		return "Fighter_AweMounts";
+	}
+
+	private final static String localizedName = CMLib.lang().L("Awe Mounts");
+
+	@Override
+	public String name()
+	{
+		return localizedName;
+	}
+
+	@Override
+	public int abstractQuality()
+	{
+		return Ability.QUALITY_BENEFICIAL_SELF;
+	}
+
+	@Override
+	protected int canAffectCode()
+	{
+		return Ability.CAN_MOBS;
+	}
+
+	@Override
+	protected int canTargetCode()
+	{
+		return 0;
+	}
+
+	@Override
+	public boolean isAutoInvoked()
+	{
+		return true;
+	}
+
+	@Override
+	public boolean canBeUninvoked()
+	{
+		return false;
+	}
+
+	@Override
+	public int classificationCode()
+	{
+		return Ability.ACODE_SKILL|Ability.DOMAIN_ANIMALAFFINITY;
+	}
+
+	protected boolean isAMount(final MOB mob, final MOB possMountM)
+	{
+		final PairList<Race, String> choices = Fighter_CallSteed.getMountChoices(mob);
+		return choices.containsFirst(possMountM.baseCharStats().getMyRace());
+	}
+
+	@Override
+	public boolean okMessage(final Environmental myHost, final CMMsg msg)
+	{
+		if(((msg.targetMajor()&CMMsg.MASK_MALICIOUS)>0)
+		&&(!CMath.bset(msg.sourceMajor(),CMMsg.MASK_ALWAYS))
+		&&(affected instanceof MOB)
+		&&(msg.target() instanceof MOB)
+		&&(msg.source().getVictim()!=msg.target())
+		)
+		{
+			final MOB target=(MOB)msg.target();
+			final MOB mob=(MOB)affected;
+			if((!target.isInCombat())
+			&&((target==mob)||(mob.getGroupMembersAndRideables(new HashSet<Rider>()).contains(target)))
+			&&(msg.source().location()==target.location())
+			&&(CMLib.dice().rollPercentage()>((msg.source().phyStats().level()-(mob.phyStats().level()+(2*getXLEVELLevel(mob))))*10))
+			&&(isAMount(mob, msg.source())))
+			{
+				msg.source().tell(L("You are too much in awe of @x1",mob.name(msg.source())));
+				if(target.getVictim()==msg.source())
+				{
+					target.makePeace(true);
+					target.setVictim(null);
+				}
+				return false;
+			}
+		}
+		return super.okMessage(myHost,msg);
+	}
+
+}
