@@ -32,7 +32,7 @@ import java.util.*;
    See the License for the specific language governing permissions and
    limitations under the License.
 */
-public class Skill_Buck extends StdSkill
+public class Skill_Buck extends StdSkill implements Behavior
 {
 	@Override
 	public String ID()
@@ -99,6 +99,139 @@ public class Skill_Buck extends StdSkill
 	}
 
 	@Override
+	public void startBehavior(final PhysicalAgent forMe)
+	{
+		setAffectedOne(forMe);
+	}
+
+	@Override
+	public void endBehavior(final PhysicalAgent forMe)
+	{
+	}
+
+	@Override
+	public void registerDefaultQuest(final Object questName)
+	{
+	}
+
+	@Override
+	public String getParms()
+	{
+		return text();
+	}
+
+	@Override
+	public void setParms(final String parameters)
+	{
+		setMiscText(parameters);
+	}
+
+	@Override
+	public String parmsFormat()
+	{
+		return CMParms.FORMAT_UNDEFINED;
+	}
+
+	@Override
+	public boolean canImprove(final PhysicalAgent E)
+	{
+		return this.canAffect(E);
+	}
+
+	@Override
+	public boolean canImprove(final int can_code)
+	{
+		return this.canAffect(can_code);
+	}
+
+	@Override
+	public boolean grantsAggressivenessTo(final MOB M)
+	{
+		return false;
+	}
+
+	@Override
+	public void executeMsg(final Environmental myHost, final CMMsg msg)
+	{
+		super.executeMsg(myHost, msg);
+		if((msg.targetMinor()==CMMsg.TYP_BUY)
+		&&(msg.tool()==affected)
+		&&(affected instanceof MOB))
+		{
+			((MOB)affected).delBehavior(this);
+			((MOB)affected).basePhyStats().addAmbiance("@NOAUTOBUCK");
+			((MOB)affected).recoverPhyStats();
+		}
+	}
+
+	@Override
+	public boolean autoInvocation(final MOB mob, final boolean force)
+	{
+		if(!mob.isPlayer())
+		{
+			final PhyStats stats = mob.phyStats();
+			if(stats.isAmbiance("@TAMED"))
+			{
+				if(!stats.isAmbiance("@NOAUTOBUCK"))
+				{
+					mob.basePhyStats().addAmbiance("@NOAUTOBUCK");
+					stats.addAmbiance("@NOAUTOBUCK");
+				}
+			}
+			else
+			if(!stats.isAmbiance("@NOAUTOBUCK"))
+			{
+				final Behavior B = mob.fetchBehavior(ID());
+				if(B == null)
+				{
+					final Skill_Buck sB =(Skill_Buck)this.copyOf();
+					sB.setSavable(false);
+					mob.addBehavior(sB);
+				}
+			}
+		}
+		return false;
+	}
+
+	@Override
+	public boolean tick(final Tickable ticking, final int tickID)
+	{
+		if(affected instanceof Rideable)
+		{
+			final Rideable rideR = (Rideable)affected;
+			if((rideR instanceof MOB)
+			&&(rideR.numRiders()>0))
+			{
+				final MOB mob=(MOB)rideR;
+				if((!mob.isPlayer())
+				&&(mob.isMonster())
+				&&(mob.getStartRoom()!=null))
+				{
+					final Room startR = mob.getStartRoom();
+					final PrivateProperty prop = CMLib.law().getPropertyRecord(startR);
+					final Set<MOB> grp = mob.getGroupMembers(new HashSet<MOB>());
+					boolean proceed = true;
+					for(int f=0;f<rideR.numRiders();f++)
+					{
+						final Rider R = rideR.fetchRider(f);
+						if((R!=null)
+						&&(grp.contains(R)
+							||((prop!=null)&&(CMLib.law().doesHavePriviledgesHere(mob, startR)))))
+							proceed=false;
+					}
+					if(proceed)
+					{
+						final Ability A = mob.fetchAbility(ID());
+						if(A!=null)
+							A.invoke(mob, null, false, 0);
+					}
+				}
+			}
+		}
+		return true; // skip ALL the things
+	}
+
+	@Override
 	public boolean invoke(final MOB mob, final List<String> commands, final Physical givenTarget, final boolean auto, final int asLevel)
 	{
 		if((!(mob instanceof Rideable))
@@ -159,5 +292,4 @@ public class Skill_Buck extends StdSkill
 
 		return success;
 	}
-
 }
