@@ -87,7 +87,7 @@ public class Buffalo extends Cow
 	}
 
 	private final String[]	racialAbilityNames			= { "CowSpeak", "Skill_Buck", "Fighter_Charge", "Grazing" };
-	private final int[]		racialAbilityLevels			= { 1, 4, 15, 1 };
+	private final int[]		racialAbilityLevels			= { 1, 1, 15, 1 };
 	private final int[]		racialAbilityProficiencies	= { 100, 50, 100, 100 };
 	private final boolean[]	racialAbilityQuals			= { false, false, false, false };
 	private final String[]	racialAbilityParms			= { "", "", "", "" };
