@@ -1181,14 +1181,15 @@ the mob does not pick on lower level creatures.
 BEHAVIOR_NEUTRALABILITIES=\
 Behavior   : NeutralAbilities\n\r\
 Targets    : MOBs\n\r\
-Parameters : (MIN=X MAX=X CHANCE=X) (; [ZAPPERMASK])\n\r\
+Parameters : (MIN=X MAX=X CHANCE=X) (SKILLs="[id],[id],...") (; [ZAPPERMASK])\n\r\
 Example    : min=10 max=20 chance=75\n\r\
 Example    : min=1 fightok ; -RACE +ELF\n\r\
 Description: \n\r\
 According to the timing and percent chance described by the parameters, the \
 mob with this behavior will use any of its indifferent abilities, including \
 spells, prayers, songs, or others, to the amusement of random player mobs in the \
-same room.  If a zappermask is specified, it will be nasty only to the matching.
+same room.  If a zappermask is specified, it will be nasty only to the matching. \
+To limit the skill usage to specific skills, SKILLs=[ability id] may be specified.
 
 BEHAVIOR_NICEABILITIES=\
 Behavior   : NiceAbilities\n\r\
