@@ -349,6 +349,14 @@ While standing on a shore, this skill will cause the sailors nearest big sailing
 belonging to their clan/guild to be sailed to where they are, provided there is no one \
 aboard who could do it for them.
 
+FIGHTER_AWEMOUNTS=AWE_MOUNTS
+FIGHTER_AWE_MOUNTS=AWE_MOUNTS
+AWE_MOUNTS=<ABILITY>\
+The character is so skilled with mounts, especially his favored or racial mounts, \
+that he or she can instill in such creatures a feeling a awe.  This will prevent \
+any aggressive individuals from initiating combat against them or anyone in their \
+group.
+
 THIEF_AVOIDTRAPS=AVOID_TRAPS
 AVOID_TRAPS=<ABILITY>\
 Example  : \n\r\
@@ -3914,6 +3922,12 @@ Example  : researchregionmap midgaard\n\r\
 Inside a library or similar room full of books, the player attempts \
 to research the location of some distant area, and find rare overland region \
 maps showing the relative locations of the areas along the way.
+
+RESIST_BUCK=SKILL_RESISTBUCK
+RESISTBUCK=SKILL_RESISTBUCK
+SKILL_RESISTBUCK=<ABILITY>\
+The character has learned to resist attempts at being Bucked \
+from a mount.
 
 FIGHTER_RETURNPROJECTILE=RETURN_PROJECTILE
 RETURNPROJECTILE=RETURN_PROJECTILE
